WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 30878
[Gtk] atk_text_get_text() fails in entries when the end_offset is -1
https://bugs.webkit.org/show_bug.cgi?id=30878
Summary
[Gtk] atk_text_get_text() fails in entries when the end_offset is -1
Joanmarie Diggs
Reported
2009-10-28 14:09:23 PDT
Steps to reproduce: 1. Navigate to Google 2. Type "foo" in the search entry 3. Launch Accerciser 4. Select the object of ROLE_ENTRY and get into the iPython console In [1]: acc.queryText().getText(0, -1) Out[1]: '' <--- wrong (should be 'foo') In [2]: acc.queryText().getText(0, 3) Out[2]: 'foo' <--- (everything else seems to work; just not an end_offset at -1) Also note that if you select other objects which implement AtkText (including the object of ROLE_TEXT which is the descendant of the entry above), atk_text_get_text(0, -1) works as expected.
Attachments
substitute String length for an end_offset of -1
(2.07 KB, patch)
2009-11-06 19:35 PST
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joanmarie Diggs
Comment 1
2009-11-06 19:35:30 PST
Created
attachment 42683
[details]
substitute String length for an end_offset of -1
Xan Lopez
Comment 2
2009-11-07 00:48:12 PST
Comment on
attachment 42683
[details]
substitute String length for an end_offset of -1 Looks good to me.
WebKit Commit Bot
Comment 3
2009-11-07 01:03:33 PST
Comment on
attachment 42683
[details]
substitute String length for an end_offset of -1 Clearing flags on attachment: 42683 Committed
r50615
: <
http://trac.webkit.org/changeset/50615
>
WebKit Commit Bot
Comment 4
2009-11-07 01:03:37 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug