2009-11-07  Joanmarie Diggs  <joanmarie.diggs@gmail.com>

Reviewed by Xan Lopez.

        https://bugs.webkit.org/show_bug.cgi?id=30878
        [Gtk] atk_text_get_text() fails in entries when the end_offset is -1

        If the end_offset is -1, use the String length as the end_offset.

        * accessibility/gtk/AccessibilityObjectWrapperAtk.cpp:
        (webkit_accessible_text_get_text):

Canonical link: https://commits.webkit.org/42045@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50615 268f45cc-cd09-0410-ab3c-d52691b4dbfc